# GNOsLA

./: README.md  pyproject.toml
gola/: __init__.py  data.py  graph.py  layers.py  losses.py  model.py  train.py  visualization.py  visualization_plotly.py
notebooks/: gola_colab_demo.ipynb
scripts/: train_gola.py
